Se agrego el CRUD personal Medico de forma funcional

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@
                  <h1><p>Como <br>podemos <br> ayudarles ?</p> </h1> 
              </b>
            <br>
-          <a href="./soliciteunacita.html" >SOLICITE UNA CITA</a>
+          <a href="soliciteunacita.html" >SOLICITE UNA CITA</a>
       </main>
   </div>
   
