--- a/src/main/webapp/validacion_registros.html
+++ b/src/main/webapp/validacion_registros.html
@@ -33,7 +33,7 @@
            <div class="contenido-menu-principal">
              <div class="usuario">
               <h6><strong>Usuario </strong> </h6><br>
-              <a href="./validacion_usuarios.jsp" class="boton-saber-mas">Iniciar</a>
+              <a href="./registro_usuarios.jsp" class="boton-saber-mas">Iniciar</a>
              </div>
             
               <!--<div class="personal_medico">
@@ -43,7 +43,7 @@
   
                <div id="icono-mobile" ">
                 <h6><strong>Personal medico</strong></h6><br>
-                <a href="ControladorUsuario?accion=add"  class="boton-saber-mas">Iniciar</a>
+                <a href="./registro_medicos.jsp"  class="boton-saber-mas">Iniciar</a>
                 </div>
               </div>
           
