Se agrego login de usuarios y medicos

--- a/src/main/webapp/validacion_registros.html
+++ b/src/main/webapp/validacion_registros.html
@@ -32,6 +32,8 @@
           <h2> Validacion de registros </h2>
            <div class="contenido-menu-principal">
              <div class="usuario">
+               
+              <div>    
               <h6><strong>Usuario </strong> </h6><br>
               <a href="./registro_usuarios.jsp" class="boton-saber-mas">Iniciar</a>
              </div>
