--- a/src/main/webapp/menuprinadmin.html
+++ b/src/main/webapp/menuprinadmin.html
@@ -17,7 +17,7 @@
     <div id="sideNavigation" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <h2>MENU</h2>
-      <a href="#">MODULO PACIENTES</a>
+      <a href="consultarPaciente.jsp">MODULO PACIENTES</a>
       <a href="consultarMedicos.jsp">MUDULO MEDICOS</a>
       <a  name="" href="consultarUsuarios.jsp">MUDULO USUARIOS</a>
       <a href="#">AYUDA</a><br>
