se corrigieron varios stylos en css

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consultorio Medico</title>
-  <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-  <link href="CSS/index.css" rel="stylesheet" type="text/css"/>
+  <link href="CSS/index1.css" rel="stylesheet" type="text/css"/>
+  <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>  
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/b168a77a02.js" crossorigin="anonymous"  ></script>
   <link rel="shortcut icon" href="./img/logoprincipal1.png">
@@ -14,8 +14,8 @@
 <body >
 
   <header>
-    <div class="logo" >
-      <img src="./img/logoprincipal1.png"> 
+    <div class="logo" >     
+      <img src="img/logoprincipal1.png" alt="logo principal"/>
     </div>
       <input type="checkbox" id="check">
            <label for="check" class="mostrar-menu">
@@ -48,3 +48,4 @@
   
 </body>
 </html>
+
