--- a/src/main/webapp/validacion_registros.html
+++ b/src/main/webapp/validacion_registros.html
@@ -20,7 +20,7 @@
                 &#8801
             </label>
             <nav class="menu">
-                <a href="./inicio_registro.html" >Atras</a>
+                <a href="./inicio_registros.html" >Atras</a>
                 <label for="check" class="esconder-menu">
                     &#215
                 </label>      
